@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2017, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2018, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -37,38 +37,38 @@ FSL_TEST_SUITE( thread );
 
 
 FSL_TEST_FUNCTION( in_proc_constructor ) {
-    std::atomic<int> count{0};
-    fostlib::in_process< executor > ipc2( new executor( count ) );
-    fostlib::in_process< executor > ipc1(
-        boost::lambda::bind( factory, boost::ref( count ) )
-    );
-    FSL_CHECK_EQ( count.load(), 2 );
+    std::atomic<int> count{};
+    fostlib::in_process<executor> ipc2(new executor(count));
+    fostlib::in_process<executor> ipc1([&count]() {
+        return factory(count);
+    });
+    FSL_CHECK_EQ(count.load(), 2);
 }
 
 
 FSL_TEST_FUNCTION( in_proc_futures ) {
     std::atomic<int> count{0};
-    fostlib::in_process< executor > ipc( new executor( count ) );
-    FSL_CHECK_EQ( count.load(), 1 );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::value, boost::lambda::_1 )
-    ), 1 );
-    FSL_CHECK_EQ( ipc.asynchronous< int >(
-        boost::lambda::bind( &executor::value, boost::lambda::_1 )
-    )(), 1 );
+    fostlib::in_process<executor> ipc(new executor(count));
+    FSL_CHECK_EQ(count.load(), 1);
+    FSL_CHECK_EQ(1, ipc.synchronous<int>([](auto &e) {
+        return e.value();
+    }));
+    FSL_CHECK_EQ(1, ipc.asynchronous<int>([](auto &e) {
+        return e.value();
+    })());
 }
 
 
 FSL_TEST_FUNCTION( in_proc_future_const_method ) {
     std::atomic<int> count{0};
-    fostlib::in_process< executor > ipc( new executor( count ) );
-    FSL_CHECK_EQ( count.load(), 1 );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
-    ), 1 );
-    FSL_CHECK_EQ( ipc.asynchronous< int >(
-        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
-    )(), 1 );
+    fostlib::in_process< executor > ipc(new executor(count));
+    FSL_CHECK_EQ(count.load(), 1);
+    FSL_CHECK_EQ(1, ipc.synchronous<int>([](const auto &e) {
+        return e.const_value();
+    }));
+    FSL_CHECK_EQ(1, ipc.synchronous<int>([](const auto &e) {
+        return e.const_value();
+    }));
 }
 
 
@@ -76,25 +76,25 @@ FSL_TEST_FUNCTION( in_proc_void_future ) {
     std::atomic<int> count{0};
     fostlib::in_process< executor > ipc( new executor( count ) );
     FSL_CHECK_EQ( count.load(), 1 );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::value, boost::lambda::_1 )
-    ), 1 );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::const_value, boost::lambda::_1 )
-    ), 1 );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
-    ), 2 );
-    ipc.synchronous< void >(
-        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
-    );
-    FSL_CHECK_EQ( ipc.synchronous< int >(
-        boost::lambda::bind( &executor::value, boost::lambda::_1 )
-    ), 3 );
+    FSL_CHECK_EQ(1, ipc.synchronous<int>([](auto &e) {
+        return e.value();
+    }));
+    FSL_CHECK_EQ(1, ipc.synchronous<int>([](const auto &e) {
+        return e.const_value();
+    }));
+    FSL_CHECK_EQ(2, ipc.synchronous<int>([](auto &e) {
+        return e.increment();
+    }));
+    ipc.synchronous<void>([](auto &e) {
+        return e.increment();
+    });
+    FSL_CHECK_EQ(3, ipc.synchronous<int>([](auto &e) {
+        return e.value();
+    }));
     // We should see a segfault here if the we don't wait on the execution properly
-    ipc.synchronous< void >(
-        boost::lambda::bind( &executor::increment, boost::lambda::_1 )
-    );
+    ipc.synchronous<void>([](auto &e) {
+        e.increment();
+    });
 }
 
 
