@@ -11,8 +11,6 @@
 #include <fost/thread.hpp>
 #include <fost/log.hpp>
 
-#include <boost/lambda/lambda.hpp>
-
 #include <future>
 #include <utility>
 
@@ -41,9 +39,9 @@ struct fostlib::worker::context {
 
     bool m_terminate;
 
-    boost::mutex m_mutex;
-    boost::condition m_control;
-    std::unique_ptr<boost::thread> m_thread;
+    std::mutex m_mutex;
+    std::condition_variable m_control;
+    std::unique_ptr<std::thread> m_thread;
 
     static void execute(std::shared_ptr<context> self);
 };
@@ -57,7 +55,7 @@ struct fostlib::worker::context {
 fostlib::worker::worker()
 : self(new context) {
     self->m_thread.reset(
-        new boost::thread([this]() {context::execute(self);}));
+        new std::thread([this]() {context::execute(self);}));
     ++p_created;
 }
 
@@ -65,11 +63,11 @@ fostlib::worker::worker()
 fostlib::worker::~worker() throw ()
 try {
     {
-        boost::mutex::scoped_lock lock(self->m_mutex);
+        std::lock_guard<std::mutex> lock(self->m_mutex);
         self->m_terminate = true;
         self->m_control.notify_all();
     }
-    if ( boost::this_thread::get_id() != self->m_thread->get_id() ) {
+    if ( std::this_thread::get_id() != self->m_thread->get_id() ) {
         /**
             It is possible for a thread to commit suicide, in which case
             there is nothing we want to notify and we certainly don't want
@@ -99,7 +97,7 @@ std::shared_ptr< fostlib::detail::future_result< void > > fostlib::worker::opera
  void fostlib::worker::queue(
      std::shared_ptr< detail::future_result< void > > future, std::function<void(void)> f
  ) const {
-    boost::mutex::scoped_lock lock(self->m_mutex);
+    std::lock_guard<std::mutex> lock(self->m_mutex);
     self->m_queue.push_back(std::make_pair(future, f));
     self->m_control.notify_all();
 }
@@ -129,7 +127,7 @@ void fostlib::worker::context::execute(std::shared_ptr<context> self) {
     do {
         t_queue job;
         { // Find a job to perform
-            boost::mutex::scoped_lock lock(self->m_mutex);
+            std::unique_lock<std::mutex> lock(self->m_mutex);
             terminate = self->m_terminate;
             if ( !terminate && self->m_queue.empty() ) {
                 self->m_control.wait(lock);
@@ -153,14 +151,14 @@ void fostlib::worker::context::execute(std::shared_ptr<context> self) {
                 }
             } catch ( fostlib::exceptions::exception &e ) {
                 insert(e.data(), "across-thread", true);
-                boost::mutex::scoped_lock lock(j->first->m_mutex);
+                std::lock_guard<std::mutex> lock(j->first->m_mutex);
 #ifdef FOST_NO_STD_EXCEPTION_PTR
                 j->first->m_exception = coerce<json>(e);
 #else
                 j->first->m_exception = std::current_exception();
 #endif
             } catch ( std::exception &e ) {
-                boost::mutex::scoped_lock lock(j->first->m_mutex);
+                std::lock_guard<std::mutex> lock(j->first->m_mutex);
 #ifdef FOST_NO_STD_EXCEPTION_PTR
                 j->first->m_exception = coerce<string>(e.what());
 #else
@@ -169,7 +167,7 @@ void fostlib::worker::context::execute(std::shared_ptr<context> self) {
             } catch ( ... ) {
                 log::error(c_fost_base_core,
                     "An unknown exception was caught -- abandoning thread");
-                boost::mutex::scoped_lock lock(j->first->m_mutex);
+                std::lock_guard<std::mutex> lock(j->first->m_mutex);
 #ifdef FOST_NO_STD_EXCEPTION_PTR
                 j->first->m_exception = json("{Unknown exception}");
 #else
@@ -178,12 +176,12 @@ void fostlib::worker::context::execute(std::shared_ptr<context> self) {
                 terminate = true; // Kill the thread after an unknown exception
             }
             {// Notify futures
-                boost::mutex::scoped_lock lock(j->first->m_mutex);
+                std::lock_guard<std::mutex> lock(j->first->m_mutex);
                 j->first->m_completed = true;
                 j->first->m_has_result.notify_all();
             }
             if ( !terminate ) {
-                boost::mutex::scoped_lock lock(self->m_mutex);
+                std::lock_guard<std::mutex> lock(self->m_mutex);
                 terminate = self->m_terminate;
             }
         }
@@ -208,9 +206,9 @@ fostlib::detail::future_result< void >::~future_result() {
 #ifdef FOST_NO_STD_EXCEPTION_PTR
 
 fostlib::json fostlib::detail::future_result< void >::exception() {
-    boost::mutex::scoped_lock lock( m_mutex );
+    std::unique_lock<std::mutex> lock( m_mutex );
     if ( !this->completed() )
-        m_has_result.wait( lock, boost::lambda::var( m_completed ) );
+        m_has_result.wait(lock, [this]() { return m_completed; });
     return m_exception;
 }
 
@@ -224,9 +222,9 @@ void fostlib::detail::future_result<void>::wait() {
 #else
 
 std::exception_ptr fostlib::detail::future_result< void >::exception() {
-    boost::mutex::scoped_lock lock( m_mutex );
+    std::unique_lock<std::mutex> lock( m_mutex );
     if ( !this->completed() )
-        m_has_result.wait( lock, boost::lambda::var( m_completed ) );
+        m_has_result.wait(lock, [this]() { return m_completed; });
     return m_exception;
 }
 
@@ -241,8 +239,12 @@ void fostlib::detail::future_result<void>::wait() {
 
 
 void fostlib::detail::future_result< void >::wait(const timediff &td) {
-    boost::mutex::scoped_lock lock( m_mutex );
-    if ( !this->completed() )
-        m_has_result.timed_wait( lock, td, boost::lambda::var( m_completed ) );
+    const std::chrono::nanoseconds t{td.total_nanoseconds()};
+    std::unique_lock<std::mutex> lock(m_mutex);
+    if ( !this->completed() ) {
+        m_has_result.wait_for(lock, t, [this]() {
+            return m_completed;
+        });
+    }
 }
 
