@@ -1,5 +1,6 @@
 2019-01-12  Kirit Saelensminde  <kirit@felspar.com>
- Remove previously deprecated `fostlib::counter`.
+ * Removed Boost lambda and bind
+ * Remove previously deprecated `fostlib::counter`.
 
 2018-01-06  Kirit Saelensminde  <kirit@felspar.com>
  Allow the C++ version to be specified as `std-version` in the requirments.jam file.
